--- a/_locales/zh/lcd1602-strings.json
+++ b/_locales/zh/lcd1602-strings.json
@@ -1,7 +1,8 @@
 {
     "lcd1602|block": "LCD1602",
     "lcd1602.setAddress|block": "設定LCD1602 I2C位址 %myAddr",
-    "lcd1602.puts|block": "LCD 顯示字串 %s|在座標 x:%x|y:%y",
+    "lcd1602.putString|block": "LCD 顯示字串 %s|在座標 x:%x|y:%y",
+    "lcd1602.putNumber|block": "LCD 顯示數字 %n|在座標 x:%x|y:%y",
     "lcd1602.on_off.on|block":"開",
     "lcd1602.on_off.off|block":"關",
     "lcd1602.visibled.visible|block":"顯示",
