--- a/_locales/zh/lcd1602-strings.json
+++ b/_locales/zh/lcd1602-strings.json
@@ -2,6 +2,7 @@
     "lcd1602|block": "LCD1602液晶",
     "lcd1602.setAddress|block": "设置LCD1602 I2C地址 %myAddr",
     "lcd1602.setAddress2|block": "设置LCD1602 I2C地址 %myAddr",
+    "lcd1602.setAddress3|block": "自动设置LCD1602 I2C地址",
     "lcd1602.putString|block": "LCD 显示字符串 %s|在坐标 x:%x|y:%y",
     "lcd1602.putNumber|block": "LCD 显示数字 %n|在坐标 x:%x|y:%y",
     "lcd1602.on_off.on|block":"开",
